# entiscope

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: API.md
entiscope/: __init__.py  __main__.py  _api.py
entiscope/_cli/: __init__.py  args.py  render.py
entiscope/_core/: __init__.py  bioes.py  decoder.py  detect.py  download.py  entities.py  pipeline.py  plugins.py  regex_filter.py  runtime.py  schema.py  transitions.py
entiscope/_eval/: __init__.py  dataset.py  metrics.py  runner.py
entiscope/_model/: __init__.py  config.py
entiscope/_train/: __init__.py  modeling.py  runner.py
tests/: conftest.py  test_auto.py  test_decoder.py  test_detect.py  test_pipeline.py  test_plugins.py  test_regex.py  test_schema.py
tests/fixtures/: regex_rules.min.yaml
