[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entiscope"
version = "0.1.0"
description = "entiscope — multilingual PII detection & masking engine (ONNX, BIOES + Viterbi). Install a language pack, e.g. entiscope-ko."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "entiscope Core Team" }]
keywords = ["pii", "ner", "redaction", "privacy", "onnx", "multilingual"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "numpy>=1.22",
    "PyYAML>=6.0",
    "onnxruntime>=1.17",
    "transformers>=4.38",
    "huggingface_hub>=0.20",
]

[project.optional-dependencies]
# Production inference needs no PyTorch (SRS §2.4). These extras are only for
# user fine-tuning (FR-2.6) and local export.
train = ["torch>=2.0", "datasets>=2.16"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

# The console command lives ONLY in the core, so co-installed language packs
# never collide over it.
[project.scripts]
entiscope = "entiscope.__main__:main"

[project.urls]
Homepage = "https://github.com/zafrem/entiscope"
Documentation = "https://github.com/zafrem/entiscope/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["entiscope*"]

# The core ships NO language YAML — regex rules and entity configs come from the
# installed language plugins (entiscope-ko, entiscope-en, …).
